[gd_scene load_steps=2 format=2]

[ext_resource path="res://Crew.gd" type="Script" id=1]

[node name="Crew" type="Control"]
margin_right = 250.0
margin_bottom = 100.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrewBG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.223529, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_left = 50.0
margin_top = 10.0
margin_right = 150.0
margin_bottom = 24.0
text = "Crew Name"
align = 1

[node name="ModuleOption" type="OptionButton" parent="."]
margin_left = 10.0
margin_top = 40.0
margin_right = 160.0
margin_bottom = 60.0
text = "Engine"
items = [ "Engine", null, false, 0, null, "Navigation", null, false, 1, null, "Computer", null, false, 2, null, "Life Support", null, false, 3, null, "Hull", null, false, 4, null, "Sensors", null, false, 5, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskOption" type="OptionButton" parent="."]
margin_left = 50.0
margin_top = 70.0
margin_right = 150.0
margin_bottom = 90.0
text = "Boost"
items = [ "Boost", null, false, 0, null, "Repair", null, false, 1, null ]
selected = 0

[node name="XPLevel" type="Label" parent="."]
margin_left = 170.0
margin_right = 240.0
margin_bottom = 100.0
text = "Engine: 0
Controls: 0
Comp: 0
Life Sup: 0
Hull: 0
Comms: 0"
[connection signal="item_selected" from="ModuleOption" to="." method="_on_ModuleOption_item_selected"]
[connection signal="item_selected" from="TaskOption" to="." method="_on_TaskOption_item_selected"]
